hiding parts of editField modal.

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 	<script type="text/javascript" src="/js/widget/widget-builder-directives.js"></script>
 	<script type="text/javascript" src="/js/widget/widget-builder.js"></script>
 	<script type="text/javascript">
-		var widgetModelData = {WidgetType: 'ContactWidget'};
+		var widgetModelData = { modelWidget: { WidgetType: 'ContactWidget' }, widgetTemplates: [] };
 		var wbuilder = new LoanTekWidget.WidgetBuilder(jQuery, widgetModelData);
 	</script>
 </body>
