--- a/index.html
+++ b/index.html
@@ -32,9 +32,44 @@
 			</div>
 		</div>
 	</nav>
+	<!-- <style>
+		.lt-spinner {
+			width: 100px;
+			height: 100px;
+			animation: spinner 1s linear infinite;
+		}
+		.lt-spinner img {
+			width: 100%;
+		}
+		.my-spinner {
+			border: 4px solid #DDDDDD;
+			width: 100%;
+			height: 100%;
+			border-radius: 50%;
+			position: relative;
+		}
+		.my-spinner::before {
+			content: ' ';
+			position: absolute;
+			top: 5%;
+			left: 47%;
+			background-color: #DDDDDD;
+			width: 6%;
+			height: 20%;
+			border-radius: 1em;
+		}
+		@keyframes spinner {
+			from { transform: rotate(0deg); }
+			to { transform: rotate(360deg); }
+		}
+	</style> -->
 	<div class="container">
 		<a name="widgetTop"></a>
 		<h1>Widget Builder</h1>
+		<!-- <div class="lt-spinner">
+			<div class="my-spinner"></div>
+			<img src="/images/spinner.png" alt="" />
+		</div> -->
 		<div class="row">
 			<div class="col-sm-4">
 				<form action="" class="form-horizontal">
@@ -81,7 +116,7 @@
 										</div>
 										<div class="form-group form-group-sm">
 											<div class="col-sm-12">
-												<button class="btn btn-xs btn-primary" data-ng-class="" type="button">save</button>
+												<button class="btn btn-xs btn-primary" data-ng-click="SaveWidget();" type="button">save</button>
 												<button class="btn btn-xs btn-success" type="button">save as new</button>
 												<button class="btn btn-xs btn-danger" type="button">delete</button>
 											</div>
