start of Metronic testing

--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
 				</div>
 				<div id="navbar" class="collapse navbar-collapse">
 					<ul class="nav navbar-nav">
-						<li><a href="contactWidget.html">contactWidget</a></li>
+						<!-- <li><a href="contactWidget.html">contactWidget</a></li>
 						<li><a href="contactWidgetBuild.html">contactWidgetBuild</a></li>
-						<li><a href="widgetTest.html">widgetTest</a></li>
+						<li><a href="widgetTest.html">widgetTest</a></li> -->
+						<li><a href="test/papaparse">Papa Parse</a></li>
+						<li><a href="test/metronic">Metronic</a></li>
 						<li><a href="">link</a></li>
 					</ul>
 				</div>
