updated widget stuff move and ready for update

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 						<li><a href="widgetTest.html">widgetTest</a></li> -->
 						<li><a href="test/papaparse">Papa Parse</a></li>
 						<li><a href="test/metronic">Metronic</a></li>
+						<li><a href="test/deposit_widget">Deposit Widget</a></li>
 						<li><a href="">link</a></li>
 					</ul>
 				</div>
