created BuildFields script based on some code in FormBuild that may be reused for Results Pane.  Needs to be implemented and tested.

--- a/test/deposit_widget/deposit-test.html
+++ b/test/deposit_widget/deposit-test.html
@@ -1,4 +1,7 @@
-<style type="text/css">.ltw {display:none;}</style> <link rel="stylesheet" href="/Areas/Widgets/Content/widget.css"> <link rel="stylesheet" href="/Areas/Widgets/Content/lt-captcha.css"> <div id="ltWidgetWrapper"></div> <script type="text/javascript" src="/Scripts/lib/jquery-1/jquery.min.js"></script> <script type="text/javascript" src="/Scripts/lib/jquery/jquery.placeholder.min.js"></script> <script type="text/javascript" src="/Areas/Widgets/Scripts/post-object/contact.js"></script> <script type="text/javascript" src="/Areas/Widgets/Scripts/common/lt-captcha.js"></script> <script type="text/javascript" src="/Areas/Widgets/Scripts/common/widget-helpers.js"></script> <script type="text/javascript" src="/Areas/Widgets/Scripts/widget/widget.js"></script> <script type="text/javascript">
+<style type="text/css">.ltw {display:none;}</style> <link rel="stylesheet" href="/Areas/Widgets/Content/widget.css"> <link rel="stylesheet" href="/Areas/Widgets/Content/lt-captcha.css">
+<div id="ltWidgetWrapper"></div>
+<div id="ltWidgetResultWrapper"></div>
+<script type="text/javascript" src="/Scripts/lib/jquery-1/jquery.min.js"></script> <script type="text/javascript" src="/Scripts/lib/jquery/jquery.placeholder.min.js"></script> <script type="text/javascript" src="/Areas/Widgets/Scripts/post-object/contact.js"></script> <script type="text/javascript" src="/Areas/Widgets/Scripts/common/lt-captcha.js"></script> <script type="text/javascript" src="/Areas/Widgets/Scripts/common/widget-helpers.js"></script> <script type="text/javascript" src="/Areas/Widgets/Scripts/widget/widget.js"></script> <script type="text/javascript">
 (function() {
 	var ltjq = ltjq || jQuery.noConflict(true);
 	var lthlpr = new LoanTekWidget.helpers(ltjq);
@@ -15,6 +18,14 @@
 		}, {
 			"field": "submit"
 		}],
+		resultPanelTitle: 'Rates',
+		resultFields: [
+			{field: 'paging'},
+			{field: 'title'},
+			{field: 'paragraph'},
+			{field: 'depositdatalist'},
+			{field: 'paging'}
+		],
 		"widgetType": "deposit",
 		"postDOMCallback": pdfun
 	};
