working on repeating results.

--- a/test/deposit_widget/index.html
+++ b/test/deposit_widget/index.html
@@ -143,7 +143,9 @@
 						</div>
 					</div>
 					<div class="row">
-						<div data-lt-compile-code="widgetScriptDisplay"></div>
+						<div class="col-sm-12">
+							<div data-lt-compile-code="widgetScriptDisplay"></div>
+						</div>
 					</div>
 				</div>
 			</div>
