--- a/test/deposit_widget/deposit-test.html
+++ b/test/deposit_widget/deposit-test.html
@@ -1,4 +1,5 @@
 <style type="text/css">.ltw {display:none;}</style> <link rel="stylesheet" href="/Areas/Widgets/Content/widget.css"> <link rel="stylesheet" href="/Areas/Widgets/Content/lt-captcha.css">
+<style type="text/css"> .ltwF, .ltwR { width: 50%; } </style>
 <div id="ltWidgetWrapper"></div>
 <div id="ltWidgetResultWrapper"></div>
 <script type="text/javascript" src="/Scripts/lib/jquery-1/jquery.min.js"></script> <script type="text/javascript" src="/Scripts/lib/jquery/jquery.placeholder.min.js"></script> <script type="text/javascript" src="/Areas/Widgets/Scripts/post-object/contact.js"></script> <script type="text/javascript" src="/Areas/Widgets/Scripts/common/lt-captcha.js"></script> <script type="text/javascript" src="/Areas/Widgets/Scripts/common/widget-helpers.js"></script> <script type="text/javascript" src="/Areas/Widgets/Scripts/widget/widget.js"></script> <script type="text/javascript">
@@ -11,10 +12,12 @@
 	};
 	var ltwbo = {
 		"panelTitle": "Deposit Rates",
+		formBorderType: 'well',
+		fieldSize: 'sm',
 		"fields": [{
-			"field": "depositterm"
+			"field": "depositterm", cols: 6
 		}, {
-			"field": "depositamount"
+			"field": "depositamount", cols: 6
 		}, {
 			"field": "submit"
 		}],
@@ -34,7 +37,26 @@
 		"postUrl": "/test/deposit_widget/test-response.json",
 		"externalValidatorFunction": ev,
 		"clientId": 5,
-		"userId": 1940
+		"userId": 1940,
+		resultDisplayOptions: {
+			widgetType: 'deposit',
+			formBorderType: 'panel',
+			fieldSize: 'sm',
+			panelTitle: 'my results panel title',
+			fieldList: [
+				{field: 'title', value: 'Deposit List'},
+				{field: 'paragraph', value: 'explanation goes here if needed'},
+				{field: 'depositdatalist', fieldListOptions: {
+					formBorderType: 'panel',
+					fieldList: [
+						{field: 'paragraph', value: 'repeater paragraph'},
+						{field: 'api', cols: 4},
+						{field: 'totalinterestearned', cols: 4},
+						{field: 'amountplusinterest', cols: 4}
+					]
+				}}
+			]
+		}
 	};
 	var ltwfb = new LoanTekWidget.FormBuild(ltjq, lthlpr, ltwbo, ltwo);
 })();
