loops through DOM and replaces text placeholders with data

--- a/test/deposit_widget/deposit-test.html
+++ b/test/deposit_widget/deposit-test.html
@@ -50,7 +50,7 @@
 					formBorderType: 'panel',
 					fieldList: [
 						{field: 'paragraph', value: 'repeater paragraph'},
-						{field: 'api', cols: 4},
+						{field: 'api', cols: 4, value: '#{APY}% is #{APY}'},
 						{field: 'totalinterestearned', cols: 4},
 						{field: 'amountplusinterest', cols: 4}
 					]
